[package]
name = "rust-table"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "macros",
  "runtime-tokio",
  "chrono",
  "runtime-tokio-rustls",
] }
axum = { version = "0.8.1", features = ["macros", "json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors"] }
